--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "start:optimized": "node dist/server/index-optimized.js",
     "start:dev": "tsx server/index.ts",
     "start:dev:optimized": "tsx server/index-optimized.ts",
-    "lint": "eslint src server --ext .ts,.tsx --max-warnings 0",
-    "lint:fix": "eslint src server --ext .ts,.tsx --fix",
+    "lint": "eslint . --max-warnings 0",
+    "lint:fix": "eslint . --fix",
+    "type-check": "tsc --noEmit && tsc -p server/tsconfig.json --noEmit",
     "preview": "vite preview",
     "clean": "rimraf dist node_modules",
     "reinstall": "pnpm clean && pnpm install",
@@ -53,15 +54,18 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@types/ws": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
     "@vitejs/plugin-react": "^4.4.1",
     "concurrently": "^9.1.2",
     "eslint": "^9.25.0",
+    "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "nodemon": "^3.1.10",
     "only-allow": "^1.2.1",
-    "rimraf": "^6.0.1",
+    "rimraf": "^5.0.10",
     "tsx": "^4.20.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
